feat: users services, repositories, routes, controllers and tests
